# simplir

./: .gitignore  .gitmodules  Benchmark.hs  DumpPostings.hs  LICENSE  Laura.hs  Learn2Rank.hs  Main.hs  README.mkd  Robust.hs  ScoreTest.hs  StreamingRetreival.hs  StreamingRetrieval.hs  TestHtmlClean.hs  TrecIndex.hs  TrecTest.hs  ZTest.hs  cabal.project  default.nix  html-clean.cabal  laura.cabal  mk-cabal-bin.sh  nixpkgs.nix  pom.xml  simplir.cabal  trec-eval.nix
SimplIR/: Galago.hs
Text/HTML/: Clean.hs
simplir/: Learn2Rank.hs  simplir.cabal
simplir-data-source/: simplir-data-source.cabal
simplir-data-source-s3/: simplir-data-source-s3.cabal
simplir-data-source-s3/SimplIR/DataSource/: S3.hs
simplir-data-source/SimplIR/: DataSource.hs
simplir-data-source/SimplIR/DataSource/: Compression.hs  Internal.hs
simplir-disk-index/: DumpPostings.hs  simplir-disk-index.cabal
simplir-disk-index/src/SimplIR/: DiskIndex.hs  SimpleIndex.hs
simplir-disk-index/src/SimplIR/DiskIndex/: Build.hs  Document.hs  Posting.hs  Posting2.hs  Tests.hs
simplir-disk-index/src/SimplIR/DiskIndex/Posting/: Collect.hs  Merge.hs
simplir-disk-index/src/SimplIR/DiskIndex/Posting2/: CborList.hs  Collect.hs  Internal.hs  Merge.hs  PostingList.hs  TermIndex.hs  Tests.hs
simplir-disk-index/tests/: Main.hs
simplir-eval/: Main.hs  MergeRankings.hs  simplir-eval.cabal
simplir-eval/tests/: VersusTrecEval.hs
simplir-galago/: .gitignore  README.mkd  pom.xml  simplir-galago.cabal  simplir-galago.json
simplir-galago/SimplIR/: Galago.hs
simplir-galago/src/main/java/edu/unh/cs/trema/simplirgalago/: Main.java
simplir-html-clean/: .gitignore  Main.hs  html-clean.cabal  simplir-html-clean.cabal
simplir-html-clean/SimplIR/HTML/: Clean.hs
simplir-html-clean/Text/HTML/: Clean.hs
simplir-html-clean/src/SimplIR/HTML/: Clean.hs
simplir-io/: simplir-io.cabal
simplir-io/src/SimplIR/Format/: QRel.hs  TrecRunFile.hs
simplir-kyoto-index/: simplir-kyoto-index.cabal
simplir-kyoto-index/src/SimplIR/: KyotoIndex.hs
simplir-learning-to-rank/: simplir-learning-to-rank.cabal
simplir-learning-to-rank/src/SimplIR/: LearningToRank.hs  LearningToRankWrapper.hs
simplir-learning-to-rank/src/SimplIR/LearningToRank/: Tests.hs
simplir-learning-to-rank/tests/: Main.hs
simplir-leveldb-index/: simplir-leveldb-index.cabal
simplir-leveldb-index/src/SimplIR/: LevelDbIndex.hs
simplir-pipes-utils/: simplir-pipes-utils.cabal
simplir-pipes-utils/src/SimplIR/Pipes/: Progress.hs  Utils.hs
simplir-stop-words/: simplir-stop-words.cabal
simplir-stop-words/src/SimplIR/: StopWords.hs
simplir-stop-words/src/SimplIR/StopWords/: Read.hs
simplir-tools/: Search.hs  Search2.hs  simplir-tools.cabal
simplir-trec/: Benchmark.hs  simplir-trec.cabal
simplir-trec-streaming/: Extract.hs  IndexFac.hs  LearningToRank.hs  ListDocuments.hs  MergeRankings.hs  Parametric.hs  Query.hs  ReadKba.hs  Search.hs  Streaming.hs  Types.hs  Utils.hs  simplir-trec-streaming.cabal
simplir-trec-streaming/Fac/: Types.hs
simplir-trec-streaming/src/: Query.hs
simplir-trec-streaming/src/SimplIR/: TrecStreaming.hs
simplir-trec-streaming/src/SimplIR/TrecStreaming/: FacAnnotations.hs
simplir-trec/SimplIR/: TREC.hs
simplir-trec/SimplIR/TREC/: News.hs  Robust.hs
simplir-word-embedding/: simplir-word-embedding.cabal
simplir-word-embedding/src/SimplIR/: WordEmbedding.hs
simplir-word-embedding/src/SimplIR/WordEmbedding/: GloVe.hs  Parse.hs
simplir/src/Control/Concurrent/: Map.hs
simplir/src/Data/: SmallUtf8.hs  Trie.hs
simplir/src/Numeric/Log/: Scientific.hs
simplir/src/SimplIR/: Bag.hs  Encoded.hs  EncodedList.hs  FeatureSpace.hs  Intern.hs  LearningToRank.hs  LearningToRankWrapper.hs  Ranking.hs  StopWords.hs  Term.hs  Tokenise.hs  TopK.hs  TrainUtils.hs  Types.hs
simplir/src/SimplIR/Assessment/: Agreement.hs
simplir/src/SimplIR/Encoded/: Cbor.hs
simplir/src/SimplIR/EncodedList/: Cbor.hs
simplir/src/SimplIR/FeatureSpace/: Normalise.hs
simplir/src/SimplIR/Format/: QRel.hs  TrecRunFile.hs
simplir/src/SimplIR/LearningToRank/: Tests.hs
simplir/src/SimplIR/Ranking/: Evaluation.hs
simplir/src/SimplIR/Ranking/Evaluation/: Tests.hs
simplir/src/SimplIR/RetrievalModels/: BM25.hs  CorpusStats.hs
simplir/src/SimplIR/Types/: Relevance.hs
simplir/tests/: Main.hs
src/: AccumPostings.hs  CollectPostings.hs  DataSource.hs  DiskIndex.hs  DiskPostings.hs  DumpPostings.hs  Encoded.hs  EncodedList.hs  Main.hs  Progress.hs  ScoreTest.hs  SmallNat.hs  TREC.hs  Term.hs  Tokenise.hs  TopK.hs  Types.hs  Utils.hs  WarcDocSource.hs
src/BTree/: File.hs
src/Control/Concurrent/: Map.hs
src/Control/Foldl/: HashMap.hs  Map.hs  Vector.hs
src/Data/: SmallNat.hs  SmallUtf8.hs  Trie.hs
src/DiskIndex/: Document.hs  Merge.hs  Posting.hs  TermFreq.hs  Tests.hs
src/DiskIndex/Posting/: Internal.hs  Merge.hs  Tests.hs  Types.hs
src/DiskIndex/TermFreq/: Merge.hs  Types.hs
src/DiskPostings/: Merge.hs
src/RetrievalModels/: QueryLikelihood.hs
src/SimplIR/: BinaryFile.hs  DataSource.hs  DiskIndex.hs  EncodedList.hs  FeatureSpace.hs  Histogram.hs  LearningToRank.hs  LearningToRankWrapper.hs  Ranking.hs  ReadStopWords.hs  SimpleIndex.hs  Statistics.hs  StopWords.hs  Term.hs  Tokenise.hs  TopK.hs  TrecEval.hs  Types.hs  Utils.hs  WarcDocSource.hs
src/SimplIR/Assessment/: Agreement.hs
src/SimplIR/DataSource/: Gpg.hs
src/SimplIR/DiskIndex/: Build.hs  Document.hs  Posting.hs  Tests.hs
src/SimplIR/DiskIndex/Posting/: Collect.hs  Internal.hs  Merge.hs  Tests.hs  Types.hs
src/SimplIR/Format/: QRel.hs  TrecRunFile.hs
src/SimplIR/LearningToRank/: Tests.hs
src/SimplIR/Ranking/: Evaluation.hs
src/SimplIR/RetrievalModels/: BM25.hs  CorpusStats.hs  QueryLikelihood.hs  RelevanceModel.hs  TfIdf.hs
src/SimplIR/SimpleIndex/Models/: BM25.hs  QueryLikelihood.hs
src/SimplIR/Utils/: Compact.hs
src/main/java/edu/unh/cs/trema/simplirgalago/: MainClass.java
src/main/java/edu/unh/cs/trema/simplirgalago/galagoindex/: TrecCarKbParser.java
tests/: Main.hs
