name:                laura
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/bgamari/laura
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-modules:
      DiskIndex.Posting.Merge
      DiskIndex.Posting.Types
      Data.SmallNat
      Control.Foldl.Vector
      Control.Foldl.Map

  exposed-modules:
      Data.SmallUtf8
      DiskIndex
      DiskIndex.Posting
      DiskIndex.Document
      DiskIndex.Posting.Tests
      DiskIndex.Tests
      RetrievalModels.QueryLikelihood
      AccumPostings
      CollectPostings
      DataSource
      Encoded
      EncodedList
      Progress
      Tokenise
      TopK
      Utils
      Types
      Term
      WarcDocSource

  build-depends:
      base >=4.8 && <4.9,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.5,
      contravariant >= 1.3 && <1.5,
      mtl,
      binary >= 0.7 && < 0.9,
      errors >=2.0 && <2.2,
      exceptions >= 0.8,
      text >=1.2 && <1.3,
      aeson,
      containers >=0.5 && <0.6,
      case-insensitive >=1.2 && <1.3,
      pipes-zlib >= 0.4.3 && <0.5,
      pipes-lzma,
      pipes-safe,
      pipes-s3,
      lens >=4.14 && <4.15,
      http-types >=0.9 && <0.10,
      http-media >=0.6 && <0.7,
      http-parsers >= 0.1 && <0.2,
      attoparsec >=0.13 && <0.14,
      filepath >=1.4 && <1.5,
      directory,
      text-icu >=0.7 && <0.8,
      deepseq >=1.4 && <1.5,
      unordered-containers >=0.2 && <0.3,
      hashable >= 1.2 && <1.3,
      logging-facade >= 0.1 && <0.2,
      log-domain,
      dlist >= 0.7,
      profunctors >= 5.1,
      foldl >= 1.1,
      vector >= 0.11,
      vector-th-unbox >= 0.2,
      primitive,

      b-tree,
      heaps,
      vector-binary-instances >= 0.2,
      warc >=0.2 && <0.3,
      simplir-html-clean,
      binary-serialise-cbor,

      QuickCheck >=2.8 && <2.9,
      tasty,
      tasty-quickcheck,
      temporary
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010

executable laura
  main-is:             Main.hs
  build-depends:
      base >=4.8 && <4.9,
      unordered-containers >= 0.2,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      pipes-safe,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.5,
      mtl,
      binary,
      foldl,
      vector,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      simplir-html-clean,
      warc,
      b-tree,
      laura
  default-language:    Haskell2010
  ghc-options:         -Wall

executable dump-postings
  main-is:             DumpPostings.hs
  build-depends:
      base >=4.8 && <4.9,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.5,
      mtl,
      binary,
      errors,
      foldl,
      vector,
      optparse-applicative,
      profunctors,
      exceptions >= 0.8,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      warc,
      b-tree,
      laura
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

executable score-query
  main-is:             ScoreTest.hs
  build-depends:
      base >=4.8 && <4.9,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.5,
      filepath,
      mtl,
      binary,
      foldl,
      vector,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      optparse-applicative >= 0.12,
      log-domain,
      pipes-text,
      warc,
      b-tree,
      laura,
      simplir-html-clean,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base,
    tasty,
    laura