name:                simplir
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://git.smart-cactus.org/ben/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-modules:
      SimplIR.DiskIndex.Posting.Merge
      SimplIR.DiskIndex.Posting.Types
      SimplIR.ReadStopWords
      Data.SmallNat
      Control.Foldl.Vector

  exposed-modules:
      BTree.File
      Data.SmallUtf8
      Data.Trie
      Numeric.Log.Scientific
      Control.Foldl.Map
      Control.Foldl.HashMap
      SimplIR.Assessment.Agreement
      SimplIR.Bag
      SimplIR.BinaryFile
      SimplIR.DiskIndex
      SimplIR.DiskIndex.Build
      SimplIR.DiskIndex.Posting
      SimplIR.DiskIndex.Posting.Internal
      SimplIR.DiskIndex.Posting.Collect
      SimplIR.DiskIndex.Document
      SimplIR.DiskIndex.Posting.Tests
      SimplIR.DiskIndex.Tests
      SimplIR.SimpleIndex
      SimplIR.SimpleIndex.Models.QueryLikelihood
      SimplIR.SimpleIndex.Models.BM25
      SimplIR.Format.TrecRunFile
      SimplIR.Format.QRel
      SimplIR.RetrievalModels.CorpusStats
      SimplIR.RetrievalModels.QueryLikelihood
      SimplIR.RetrievalModels.TfIdf
      SimplIR.RetrievalModels.BM25
      SimplIR.RetrievalModels.RelevanceModel
      SimplIR.StopWords
      AccumPostings
      SimplIR.Encoded
      SimplIR.EncodedList
      SimplIR.LearningToRank
      Progress
      SimplIR.Tokenise
      SimplIR.TopK
      SimplIR.Utils
      SimplIR.Utils.Compact
      SimplIR.Types
      SimplIR.Term
      SimplIR.WarcDocSource

  if impl(ghc >= 8.2)
      build-depends: ghc-compact

  build-depends:
      base >=4.8 && <4.11,
      template-haskell,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.6,
      contravariant >= 1.3 && <1.5,
      charset >= 0.3,
      mtl,
      binary >= 0.7 && < 0.9,
      errors >=2.0 && <2.3,
      exceptions >= 0.8,
      text >=1.2 && <1.3,
      aeson,
      trifecta >= 1.5,
      containers >=0.5 && <0.6,
      case-insensitive >=1.2 && <1.3,
      pipes-zlib >= 0.4.3 && <0.5,
      pipes-lzma,
      pipes-safe,
      lens >=4.14 && <4.16,
      http-types >=0.9 && <0.10,
      http-media >=0.6 && <0.7,
      http-parsers >= 0.1 && <0.2,
      attoparsec >=0.13 && <0.14,
      filepath >=1.4 && <1.5,
      directory,
      text-icu >=0.7 && <0.8,
      deepseq >=1.4 && <1.5,
      unordered-containers >=0.2 && <0.3,
      hashable >= 1.2 && <1.3,
      logging-facade >= 0.1 && <0.2,
      log-domain,
      scientific,
      dlist >= 0.7,
      profunctors >= 5.1,
      foldl >= 1.1,
      vector >= 0.11,
      vector-th-unbox >= 0.2,
      primitive,
      optparse-applicative >= 0.12,
      random,
      random-shuffle,

      monad-control,
      process,
      lifted-async,

      b-tree,
      heaps,
      vector-binary-instances >= 0.2,
      warc >=1.0 && <1.1,
      simplir-html-clean,
      serialise,

      QuickCheck >=2.8 && <2.11,
      tasty,
      tasty-quickcheck,
      temporary
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010

executable simplir-test
  main-is:             Main.hs
  build-depends:
      base,
      unordered-containers >= 0.2,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      pipes-safe,
      bytestring >=0.10 && <0.11,
      transformers,
      mtl,
      binary,
      foldl,
      vector,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      warc,
      b-tree,
      simplir-html-clean,
      simplir-data-source,
      simplir
  default-language:    Haskell2010
  ghc-options:         -Wall

executable dump-postings
  main-is:             DumpPostings.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      mtl,
      binary,
      errors,
      foldl,
      vector,
      optparse-applicative,
      profunctors,
      exceptions >= 0.8,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      warc,
      b-tree,
      simplir
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

executable simplir-learn2rank
  main-is:             Learn2Rank.hs
  build-depends:
      base,
      bytestring,
      transformers,
      filepath,
      random,
      binary,
      aeson,
      vector,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      optparse-applicative >= 0.12,
      log-domain,
      simplir
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

executable simplir-merge-runs
  main-is:             MergeRankings.hs
  build-depends:
      base,
      pipes,
      foldl,
      profunctors,
      text >=1.2 && <1.3,
      unordered-containers >= 0.2,
      optparse-applicative >= 0.12,
      simplir
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

executable score-query
  main-is:             ScoreTest.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      filepath,
      mtl,
      binary,
      foldl,
      vector,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      optparse-applicative >= 0.12,
      log-domain,
      pipes-text,
      warc,
      b-tree,
      simplir,
      simplir-html-clean,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base,
    tasty,
    simplir
