name:                simplir-data-source
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.DataSource
                       SimplIR.DataSource.Internal
                       SimplIR.DataSource.Compression
                       SimplIR.DataSource.Gpg
  other-extensions:    OverloadedStrings, FlexibleContexts
  build-depends:       base >=4.9 && <4.11,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       filepath >=1.4 && <1.5,
                       optparse-applicative >=0.14 && <0.15,
                       pipes >=4.3 && <4.5,
                       pipes-safe >=2.2 && <2.3,
                       pipes-zlib >=0.4 && <0.5,
                       pipes-lzma,
                       pipes-bytestring >=2.1 && <2.2,
                       process >=1.6 && <1.7,
                       monad-control >=1.0 && <1.1,
                       lifted-async
  default-language:    Haskell2010
