name:                simplir-disk-index
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://git.smart-cactus.org/ben/simplir
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple

extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-modules:
      SimplIR.DiskIndex.Posting.Merge
      SimplIR.DiskIndex.Posting.Types

  exposed-modules:
      SimplIR.DiskIndex
      SimplIR.DiskIndex.Build
      SimplIR.DiskIndex.Posting
      SimplIR.DiskIndex.Posting.Internal
      SimplIR.DiskIndex.Posting.Collect
      SimplIR.DiskIndex.Document
      SimplIR.DiskIndex.Posting.Tests
      SimplIR.DiskIndex.Tests
      SimplIR.SimpleIndex
      SimplIR.SimpleIndex.Models.QueryLikelihood
      SimplIR.SimpleIndex.Models.BM25

  build-depends:
      base >=4.8 && <4.11,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      split,
      binary >= 0.7 && < 0.10,
      exceptions >= 0.8,
      containers >=0.5 && <0.6,
      pipes-safe,
      filepath >=1.4 && <1.5,
      directory,
      unordered-containers >=0.2 && <0.3,
      hashable >= 1.2 && <1.3,
      log-domain,
      profunctors >= 5.1,
      foldl >= 1.1,
      vector >= 0.11,

      monad-control,
      lifted-async,

      b-tree,
      simplir,
      heaps,
      vector-binary-instances >= 0.2,
      serialise,

      QuickCheck >=2.8 && <2.11,
      tasty,
      tasty-quickcheck,
      temporary
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010

executable dump-postings
  main-is:             DumpPostings.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      mtl,
      binary,
      errors,
      foldl,
      vector,
      optparse-applicative,
      profunctors,
      exceptions >= 0.8,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      warc,
      b-tree,
      simplir,
      simplir-disk-index
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base,
    tasty,
    simplir-disk-index