name:                simplir-eval
version:             0.1.0.0
synopsis:            A small ranking evaluation utility
-- description:
homepage:            http://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable simplir-eval
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.11 && <4.12,
                       containers >=0.5 && <0.6,
                       optparse-applicative >=0.14 && <0.15,
                       simplir
  default-language:    Haskell2010
