name:                simplir-eval
version:             0.1.0.0
synopsis:            A small ranking evaluation utility
-- description:
homepage:            http://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     SimplIR.Ranking.Evaluation
                       SimplIR.TrecEval
  build-depends:       base >=4.10 && <5,
                       containers >=0.5 && <0.7,
                       vector,
                       hashable,
                       temporary,
                       process,
                       simplir-io,
                       simplir
  hs-source-dirs:      src
  default-language:    Haskell2010

executable simplir-eval
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.10 && <5,
                       containers >=0.5 && <0.7,
                       optparse-applicative >=0.14 && <0.15,
                       simplir,
                       simplir-io,
                       simplir-eval
  default-language:    Haskell2010

executable simplir-merge-runs
  main-is:             MergeRankings.hs
  build-depends:
      base,
      foldl,
      profunctors,
      text >=1.2 && <1.3,
      unordered-containers >= 0.2,
      optparse-applicative >= 0.12,
      simplir-pipes-utils,
      simplir-io,
      simplir
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

test-suite vs-trec-eval
  type:                exitcode-stdio-1.0
  main-is:             VersusTrecEval.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.10 && <5,
                       containers >=0.5 && <0.7,
                       text,
                       tasty,
                       tasty-quickcheck,
                       QuickCheck,
                       simplir,
                       simplir-io,
                       simplir-eval
  default-language:    Haskell2010
