name:                simplir-galago
version:             0.1.0.0
synopsis:            A interface for piping documents into Galago
-- description:         
homepage:            https://github.com/unh-trema/simplir-galago
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz, Ben Gamari
maintainer:          dietz@cs.umass.edu
copyright:           (c) 2017 Ben Gamari
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.Galago
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       text,
                       containers,
                       warc,
                       pipes,
                       pipes-bytestring,
                       hashable
  hs-source-dirs:      .
  default-language:    Haskell2010
