name:                simplir-html-clean
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.HTML.Clean
  other-extensions:    RecordWildCards, OverloadedStrings
  build-depends:       base >=4.9 && <5.0,
                       text >=1.2 && <1.4,
                       deepseq >=1.4 && <1.5,
                       unordered-containers >=0.2 && <0.3,
                       html-parse
  default-language:    Haskell2010

executable html-clean
  main-is:             Main.hs
  build-depends:       base,
                       text,
                       text-icu,
                       bytestring,
                       deepseq,
                       unordered-containers,
                       html-parse
  default-language:    Haskell2010