name:                simplir-leveldb-index
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.LevelDbIndex
  other-extensions:    RecordWildCards, DataKinds, OverloadedStrings
  build-depends:       base >=4.10 && <5,
                       array >= 0.5,
                       containers >= 0.5,
                       filepath >= 1.4,
                       stm >=2.4 && <2.6,
                       transformers >= 0.5,
                       binary >=0.8 && <0.10,
                       hashable >= 1.2,
                       bytestring >=0.10 && <0.11,
                       vector >=0.12 && <0.13,
                       exceptions >= 0.8,
                       async,
                       directory,
                       foldl,
                       leveldb-haskell,
                       serialise,
                       simplir
  hs-source-dirs:      src
  default-language:    Haskell2010
