name:                simplir-stop-words
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.StopWords, SimplIR.StopWords.Read
  -- other-modules:
  other-extensions:    TemplateHaskell, QuasiQuotes
  build-depends:       base >=4.11 && <4.13,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       template-haskell >=2.10 && <2.15,
                       filepath >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
