name:                simplir-tools
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable simplir
  main-is:             Search.hs
  buildable:           False
  build-depends:
      base >=4.8 && <4.11,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      filepath,
      directory,
      mtl,
      binary,
      foldl,
      vector,
      vector-algorithms,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.7,
      unordered-containers >= 0.2,
      log-domain,
      optparse-applicative >= 0.12,
      pipes-text,
      pipes-safe,
      aeson,
      warc,
      b-tree,
      simplir,
      simplir-pipes-utils,
      simplir-disk-index,
      simplir-trec-streaming,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

executable simplir2
  main-is:             Search2.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      filepath,
      directory,
      mtl,
      serialise,
      deepseq >= 1.4,
      foldl,
      vector,
      vector-algorithms,
      async >= 2.1,
      split,
      profunctors,
      text >=1.2 && <1.3,
      containers,
      unordered-containers >= 0.2,
      log-domain,
      optparse-applicative >= 0.12,
      pipes-text,
      pipes-safe,
      aeson,
      warc,
      b-tree,
      simplir,
      simplir-pipes-utils,
      simplir-html-clean,
      simplir-data-source,
      simplir-trec-streaming,
      simplir-leveldb-index,
      simplir-stop-words,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall -threaded
