name:                simplir-trec-streaming
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.TrecStreaming,
                       SimplIR.TrecStreaming.FacAnnotations
  other-extensions:    GeneralizedNewtypeDeriving, DeriveGeneric, RecordWildCards
  build-depends:       base >=4.9 && <4.10,
                       bytestring >=0.10 && <0.11,
                       unordered-containers >= 0.2 && < 0.3,
                       text >=1.2 && <1.3,
                       time >=1.6 && <1.7,
                       pinch >=0.3 && <0.4,
                       attoparsec,
                       pipes-attoparsec,
                       pipes,
                       laura
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable trec-streaming-ls-documents
  main-is:             ListDocuments.hs
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       text,
                       optparse-applicative,
                       lzma,
                       simplir-trec-streaming

executable index-fac
  main-is:             IndexFac.hs
  build-depends:
      base >=4.8 && <4.9,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.5,
      filepath,
      directory,
      temporary,
      mtl,
      binary,
      foldl,
      vector,
      vector-algorithms,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      unordered-containers >= 0.2,
      log-domain,
      optparse-applicative >= 0.12,
      pipes-text,
      pipes-safe,
      aeson,
      warc,
      b-tree,
      laura,
      simplir-trec-streaming,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall